samples/_failures_safe/1761697615_a350c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17be9dd6.c: In function ‘main’:
./samples/SAFE/__tmp_17be9dd6.c:135:5: error: expected identifier or ‘(’ at end of input
  135 |     long
      |     ^~~~
./samples/SAFE/__tmp_17be9dd6.c:135:5: error: expected declaration or statement at end of input
